fix: rename groups to roles

--- a/src/docs/5.37.x/enterprise/okta-integration.mdx
+++ b/src/docs/5.37.x/enterprise/okta-integration.mdx
@@ -152,7 +152,7 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
 +           };
 +       },
 +       /**
-+        * Get the slug of a security group to fetch permissions from.
++        * Get the slug of a security role to fetch permissions from.
 +        */
 +       getGroupSlug(context) {
 +           return context.security.getIdentity().group;
