--- a/src/docs/5.37.x/enterprise/auth0-integration.mdx
+++ b/src/docs/5.37.x/enterprise/auth0-integration.mdx
@@ -147,7 +147,7 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
 +           };
 +       },
 +       /**
-+        * Get the slug of a security group to fetch permissions from.
++        * Get the slug of a security role to fetch permissions from.
 +        */
 +       getGroupSlug(context) {
 +           const identity = context.security.getIdentity();
