docs: add customize entry editor actions article

--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -166,7 +166,7 @@ To position your custom filter before or after an existing filter, you can use t
 
 ```tsx
 <ContentEntryListConfig>
-  <Browser.Filter name={"size"} element={<FilterBySize />} before={"type"} />
+  <Browser.Filter name={"price"} element={<FilterByPrice />} before={"type"} />
 </ContentEntryListConfig>
 ```
 
