refactor: improve grammar and screen recording

--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-editor-actions.mdx
@@ -44,16 +44,16 @@ As you can see, there are two types of actions:
 
 ### Add a Button
 
-To add a new button, you need to use the `ContentEntryEditorConfig` component and mount it within your `Admin` app. Your button is just a regular React element, so it can render anything you want. 
+To add a new button, you need to use the `ContentEntryEditorConfig` component and mount it within your `Admin` app. Your button is just a regular React element, so it can render anything you want.
 
-To help developers keeping the UI consistent, you'll find an handy `useButtons` hook that exposes 4 button components:
+To help developers keep the UI consistent, you'll find a handy `useButtons` hook that exposes 4 button components:
 
 - `ButtonDefault`
 - `ButtonPrimary`
 - `ButtonSecondary`
 - `IconButton`
 
-Use one of these components if you want to render a button that inherit UI rules and guidelines from Webiny core package.
+Use one of these components if you want to render a button that inherits UI rules and guidelines from the Webiny core package.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
@@ -67,7 +67,7 @@ import "./App.scss";
 + const { useButtons } = Actions.ButtonAction;
 
 + const DownloadPdfButton = () => {
-+   // useButtons() exposes the button components used also internally: use these to keep the UI consistent. 
++   // useButtons() exposes the button components also used internally: use these to keep the UI consistent.  
 +   const { ButtonPrimary } = useButtons();
 +   
 +   return <ButtonPrimary onAction={() => alert("Download as PDF")}>Save as PDF</ButtonPrimary>; 
@@ -78,16 +78,20 @@ export const App: React.FC = () => {
       <Admin>
         <Cognito />
 +       <ContentEntryEditorConfig>
-+         <Actions.ButtonAction name={"download"} element={<DownloadPdfButton />} modelIds={["car"]} />
++         <Actions.ButtonAction
++           name={"download"}
++           element={<DownloadPdfButton />} 
++           modelIds={["car"]}
++         />
 +       </ContentEntryEditorConfig>
       </Admin>
     );
 };
 ```
 
-Declaring the `modelIds` prop you can define in which content model entry editor you want to show your custom button. Omitting this prop, you will register the button for all models in the system.
+By declaring the `modelIds` prop, you can define in which content model entry editor you want to show your custom button. If you exclude this prop, the button will be registered for all models in the system.
 
-In the example here above, next time you open a `car` content entry editor, you'll see your new element there. This is the whole process of registering a new button element.
+In the example above, you'll see your new element the next time you open a `car` content entry editor. This is the whole process of registering a new button element.
 
 <Image src={hcmsActionsButton} title="Custom Button in Action" />
 
@@ -95,7 +99,7 @@ In the example here above, next time you open a `car` content entry editor, you'
 
 This section demonstrates how you can discover the names of existing buttons. This is important for further sections on positioning, removing, and replacing buttons.
 
-The easiest way to discover existing buttons is to use the React Dev Tools plugins for your browser, and look for the `Buttons` element. From there, you can either look for `actions` props, or look at the child elements and their keys:
+The easiest way to discover existing buttons is to use your browser's React Dev Tools plugins and look for the `Buttons` element. From there, you can either look for `actions` props or look at the child elements and their keys:
 
 <Image src={hcmsActionsButtonDiscovery} title="Discover Existing Buttons" />
 
@@ -113,7 +117,7 @@ To position your custom button before or after an existing button, you can use t
 
 ### Removing a Button
 
-Sometimes you might want to remove an existing button. All you need to do is reference the button by name, and pass a `remove` prop to the `<ButtonAction>` element:
+You may want to remove an existing button. All you need to do is reference the button by name and pass a `remove` prop to the `<ButtonAction>` element:
 
 ```tsx
 <ContentEntryEditorConfig>
@@ -123,7 +127,7 @@ Sometimes you might want to remove an existing button. All you need to do is ref
 
 ### Replacing a Button
 
-To replace an existing button with a new button element, you need to reference the existing button by name, and pass a new element via the `element` prop:
+To replace an existing button with a new button element, you need to reference the existing button by name and pass a new element via the `element` prop:
 
 ```tsx
 <ContentEntryEditorConfig>
@@ -135,9 +139,9 @@ To replace an existing button with a new button element, you need to reference t
 
 ### Add a Menu Item
 
-To add a new menu item, you need to use the `ContentEntryEditorConfig` component and mount it within your `Admin` app. Your menu item is just a regular React element, so it can render anything you want.
+To add a new menu item, use the `ContentEntryEditorConfig` component and mount it within your `Admin` app. Your menu item is just a regular React element, so it can render anything you want.
 
-To help developers keeping the UI consistent, you'll find an handy `useOptionsMenuItem` hook that exposes the `OptionsMenuItem` component, inheriting UI rules and guidelines from Webiny core package.
+To help developers keep the UI consistent, you'll find a handy `useOptionsMenuItem` hook that exposes the `OptionsMenuItem` component, inheriting UI rules and guidelines from the Webiny core package.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
@@ -152,7 +156,7 @@ import "./App.scss";
 + const { useOptionsMenuItem } = Actions.MenuItemAction;
 
 + const DownloadPdfMenuItem = () => {
-+   // useOptionsMenuItem() exposes the menu item component used also internally: use this to keep the UI consistent. 
++   // useOptionsMenuItem() exposes the menu item component, also used internally: use this to keep the UI consistent. 
 +   const { OptionsMenuItem } = useOptionsMenuItem();
 +   
 +   return (
@@ -167,18 +171,22 @@ import "./App.scss";
 export const App: React.FC = () => {
     return (
       <Admin>
-        <Cognito />
-+       <ContentEntryEditorConfig>
-+         <Actions.MenuItemAction name={"download"} element={<DownloadPdfMenuItem />} modelIds={["car"]} />
-+       </ContentEntryEditorConfig>
+       <Cognito />
++      <ContentEntryEditorConfig>
++        <Actions.MenuItemAction
++          name={"download"}
++          element={<DownloadPdfMenuItem />}
++          modelIds={["car"]}
++        />
++      </ContentEntryEditorConfig>
       </Admin>
     );
 };
 ```
 
-Declaring the `modelIds` prop you can define in which content model entry editor you want to show your custom menu item. Omitting this prop, you will register the menu item for all models in the system.
+By declaring the `modelIds` prop, you can define in which content model entry editor you want to show your custom menu item. If you exclude this prop, the menu item will be registered for all models in the system.
 
-In the example here above, next time you open a `car` content entry editor, you'll see your new element within the "three dots" menu. This is the whole process of registering a new menu item element.
+In the example above, you'll see your new element the next time you open a `car` content entry editor. This is the whole process of registering a new item element.
 
 <Image src={hcmsActionsMenuItem} title="Custom Menu Item in Action" />
 
@@ -186,7 +194,7 @@ In the example here above, next time you open a `car` content entry editor, you'
 
 This section demonstrates how you can discover the names of existing menu items. This is important for further sections on positioning, removing, and replacing menu items.
 
-The easiest way to discover existing menu items is to use the React Dev Tools plugins for your browser, and look for the `OptionsMenu` element. From there, you can either look for `actions` props, or look at the child elements and their keys:
+The easiest way to discover existing menu items is to use the React Dev Tools plugins for your browser, and look for the `OptionsMenu` element. From there, you can either look for `actions` props or look at the child elements and their keys:
 
 <Image src={hcmsActionsMenuItemDiscovery} title="Discover Existing Menu Items" />
 
@@ -204,7 +212,7 @@ To position your custom menu item before or after an existing menu item, you can
 
 ### Removing a MenuItem
 
-Sometimes you might want to remove an existing menu item. All you need to do is reference the menu item by name, and pass a `remove` prop to the `<Action.MenuItemAction>` element:
+You may want to remove an existing menu item. All you need to do is reference the menu item by name and pass a `remove` prop to the `<Action.MenuItemAction>` element:
 
 ```tsx
 <ContentEntryEditorConfig>
@@ -214,7 +222,7 @@ Sometimes you might want to remove an existing menu item. All you need to do is 
 
 ### Replacing a MenuItem
 
-To replace an existing menu item with a new menu item element, you need to reference the existing menu item by name, and pass a new element via the `element` prop:
+To replace an existing menu item with a new menu item element, you need to reference the existing menu item by name and pass a new component via the `element` prop:
 
 ```tsx
 <ContentEntryEditorConfig>
