--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -27,14 +27,14 @@ This feature is available since Webiny **v5.37.0**.
 
 ## Overview
 
-By default, Headless CMS offers a single built-in filter, to help you quickly filter entries based on their status (draft, published, unpublished). To customize filters, you need to use the `ContentEntryListConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace. 
+By default, Headless CMS offers a single built-in filter to help you quickly filter entries based on their status (draft, published, unpublished). To customize filters, you need to use the `ContentEntryListConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace. 
 
 Browser is the main area of a Content Model entry List, where users browse entries, apply filters, perform searching, organize entries into folders, create new entries, etc.
 <Image src={hcmsFilters} title="Browser and the built-in filter by status" />
 
 <Alert type="info" title="Content entry setup">
 
-The code examples here below are based on a content model called `property` with the following fields: 
+The code examples here below are based on a content model called `Property` with the following fields: 
 
 - `title`: text input
 - `price`: number input
@@ -43,7 +43,7 @@ The code examples here below are based on a content model called `property` with
 
 ## Add a Filter
 
-To add a new filter, you need to use the `ContentEntryListConfig` component and mount it within your `Admin` app. Your filter is just a regular React element, so it can render anything.
+To add a new filter, you must use the `ContentEntryListConfig` component and mount it within your `Admin` app. Your filter is just a regular React element, so it can render anything.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
@@ -64,20 +64,24 @@ export const App: React.FC = () => {
       <Admin>
         <Cognito />
 +       <ContentEntryListConfig>
-+         <Browser.Filter name={"demo-filter"} element={<DemoFilter />} modelIds={["property"]} />
++         <Browser.Filter
++           name={"demo-filter"}
++           element={<DemoFilter />}
++           modelIds={["property"]}
++         />
 +       </ContentEntryListConfig>
       </Admin>
     );
 };
 ```
 
-Declaring the `modelIds` prop you can define in which Content Model entry list you want to show your custom filter. Omitting this prop, you will register the filter in all content entry browser view.
+By declaring the `modelIds` prop, you can define in which Content Model entry list you want to show your custom filter. If you exclude this prop, the filter will be registered for all models in the system.
 
-In the example here above, next time you open your `property` content model browser and expand the filters bar, you'll see your new element there. This is the whole process of registering a new filter element. In the following sections, we'll focus on implementing actual filtering.
+In the example above, the next time you open your `property` content model browser and expand the filters bar, you'll see your new element there. This is the whole process of registering a new filter element. In the following sections, we'll focus on implementing actual filtering.
 
 ### Simple Filter
 
-For the following example shows how to implement a filter that shows "Deluxe properties only". For this example, we treat a property as "Deluxe" when its `price` is higher than 1 million. Note that we are only showing the actual filter implementation. To see the filter registration
+The following example shows how to implement a filter that shows "Deluxe properties only". For this example, we treat a property as "Deluxe" when its `price` is higher than 1 million. Note that we are only showing the actual filter implementation. To see the filter registration
 process, revisit the previous section.
 
 ```tsx Switch Filter
@@ -97,15 +101,15 @@ const DemoFilter = () => {
 };
 ```
 
-Under the hood, filters are handled via a regular form component. This means that we can simply hook into the form to set new filter values. For that, we're using the `useBind` hook, and give it a name. This `name` will become a key within the form data object, which will in turn be passed to the GraphQL query. To unset a filter, we simply set `undefined`.
+Under the hood, filters are handled via a regular form component: this means we can hook into the form to set new filter values. We're using the `useBind` hook and give it a name. This `name` will become a key within the form data object, which will be passed to the GraphQL query. To unset a filter, we set `undefined`.
 
 <Image src={hcmsToggleFilter} title="Toggle Filter in Action" />
 
 ### Advanced Filter
 
-Sometimes, you need to implement filtering logic that is a bit more complex than just setting a single value. The following example shows a filter in form of a dropdown menu, where each option needs to use a different GraphQL query operator. `> 500k` needs to use the `price_gt` key, while `< 500k` needs to use the `price_lt` key. This cannot be achieved with simple form binding.
+Sometimes, you need to implement filtering logic that is more complex than just setting a single value. The following example shows a filter in the form of a dropdown menu, where each option needs to use a different GraphQL query operator. `> 500k` needs to use the `price_gt` key, while `< 500k` needs to use the `price_lt` key. This cannot be achieved with simple form binding.
 
-To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, which will allow you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API, when the user interacts with the filters UI.
+To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, allowing you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API when the user interacts with the filters UI.
 
 ```tsx Dropdown Filter
 import { useBind } from "@webiny/form";
@@ -156,7 +160,7 @@ const convertFilters = ({ price, ...rest }: any) => {
 
 This section demonstrates how you can discover the names of existing filters. This is important for further sections on positioning, removing, and replacing filters.
 
-The easiest way to discover existing filters is to use the React Dev Tools plugins for your browser, and look for the `Filters` element. From there, you can either look for `filters` props, or look at the child elements and their keys:
+The easiest way to discover existing filters is to use your browser's React Dev Tools plugins and look for the `Filters` element. From there, you can either look for `filters` props or look at the child elements and their keys:
 
 <Image src={hcmsDiscoverFilters} title="Discover Existing Filters" />
 
@@ -174,7 +178,7 @@ To position your custom filter before or after an existing filter, you can use t
 
 ## Removing a Filter
 
-Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name, and pass a `remove` prop to the `<Filter>` element:
+Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name and pass a `remove` prop to the `<Filter>` element:
 
 ```tsx
 <ContentEntryListConfig>
@@ -184,7 +188,7 @@ Sometimes you might want to remove an existing filter. All you need to do is ref
 
 ## Replacing a Filter
 
-To replace an existing filter with a new filter element, you need to reference the existing filter by name, and pass a new element via the `element` prop:
+To replace an existing filter with a new filter element, you need to reference an existing filter by name and pass a new component via the `element` prop:
 
 ```tsx
 <ContentEntryListConfig>
