--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -27,23 +27,9 @@ This feature is available since Webiny **v5.37.0**.
 
 ## Overview
 
-By default, Headless CMS offers a single built-in filter to help you quickly filter entries based on their status (draft, published, unpublished). To customize filters, you need to use the `ContentEntryListConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace. 
+By default, Headless CMS offers a single built-in filter to help you quickly filter entries based on their status (draft, published, unpublished). 
 
-Browser is the main area of a Content Model entry List, where users browse entries, apply filters, perform searching, organize entries into folders, create new entries, etc.
-<Image src={hcmsFilters} title="Browser and the built-in filter by status" />
-
-<Alert type="info" title="Content entry setup">
-
-The code examples here below are based on a content model called `Property` with the following fields: 
-
-- `title`: text input
-- `price`: number input
-
-</Alert>
-
-## Add a Filter
-
-To add a new filter, you must use the `ContentEntryListConfig` component and mount it within your `Admin` app. Your filter is just a regular React element, so it can render anything.
+To work with filters, you need to use the `ContentEntryListConfig` component. For this article, we will use the `Filter` component, located in the `Browser` namespace. 
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
@@ -53,6 +39,47 @@ import { Cognito } from "@webiny/app-admin-users-cognito";
 import "./App.scss";
 
 + // You can destructure child components to make the code more readable and easier to work with.
++ const { Browser } = ContentEntryListConfig;
+
+export const App: React.FC = () => {
+    return (
+      <Admin>
+        <Cognito />
++       <ContentEntryListConfig>
++         <Browser.Filter
++           name={"demo-filter"}
++           element={<span>{"Demo filter"}</span>}
++           modelIds={["property"]}
++         />
++       </ContentEntryListConfig>
+      </Admin>
+    );
+};
+```
+
+In the admin app, Browser is the main area of a Content Model entry List, where users browse entries, apply filters, perform searching, organize entries into folders, create new entries, etc.
+<Image src={hcmsFilters} title="Browser and the built-in filter by status" />
+
+<Alert type="info" title="Content entry setup">
+
+The code examples below are based on a content model called `Property` with the following fields: 
+
+- `title` text input
+- `price` number input
+
+</Alert>
+
+## Add a Filter
+
+To add a new filter, you need a regular React element to pass to the `Browser.Filter` component through the `element` prop. Additionally, you must include the `name` prop, which is used as a reference.
+
+```diff-tsx apps/admin/src/App.tsx
+import React from "react";
+import { Admin } from "@webiny/app-serverless-cms";
+import { Cognito } from "@webiny/app-admin-users-cognito";
++ import { ContentEntryListConfig } from "@webiny/app-headless-cms";
+import "./App.scss";
+
 + const { Browser } = ContentEntryListConfig;
 
 + const DemoFilter = () => {
@@ -81,10 +108,10 @@ In the example above, the next time you open your `property` content model brows
 
 ### Simple Filter
 
-The following example shows how to implement a filter that shows "Deluxe properties only". For this example, we treat a property as "Deluxe" when its `price` is higher than 1 million. Note that we are only showing the actual filter implementation. To see the filter registration
+The following example shows how to implement a filter that shows "Deluxe properties only": we treat a property as "Deluxe" when its `price` is higher than 1 million. Note that we are only showing the actual filter implementation. To see the filter registration
 process, revisit the previous section.
 
-```tsx Switch Filter
+```tsx Code snippet
 import { useBind } from "@webiny/form";
 import { Switch } from "@webiny/ui/Switch";
 
@@ -99,6 +126,14 @@ const DemoFilter = () => {
 
   return <Switch {...bind} label={"Show deluxe properties only"} onChange={toggleFilter} />;
 };
+
+/* Register your custom filter. */
+<ContentEntryListConfig>
+  <Browser.Filter 
+    name={"demo-filter"} 
+    element={<DemoFilter />} 
+    modelIds={["property"]} />
+</ContentEntryListConfig>;
 ```
 
 Under the hood, filters are handled via a regular form component: this means we can hook into the form to set new filter values. We're using the `useBind` hook and give it a name. This `name` will become a key within the form data object, which will be passed to the GraphQL query. To unset a filter, we set `undefined`.
@@ -111,7 +146,7 @@ Sometimes, you need to implement filtering logic that is more complex than just 
 
 To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, allowing you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API when the user interacts with the filters UI.
 
-```tsx Dropdown Filter
+```tsx Code snippet
 import { useBind } from "@webiny/form";
 import { Select } from "@webiny/ui/Select";
 
@@ -166,9 +201,9 @@ The easiest way to discover existing filters is to use your browser's React Dev 
 
 ## Positioning a Filter
 
-To position your custom filter before or after an existing filter, you can use the `before` and `after` props on the `<Filter>` element:
+To position your custom filter before or after an existing filter, you can use the `before` and `after` props on the `<Browser.Filter>` element:
 
-```tsx
+```tsx Code snippet
 <ContentEntryListConfig>
   <Browser.Filter name={"price"} element={<FilterByPrice />} before={"type"} />
 </ContentEntryListConfig>
@@ -178,9 +213,9 @@ To position your custom filter before or after an existing filter, you can use t
 
 ## Removing a Filter
 
-Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name and pass a `remove` prop to the `<Filter>` element:
+Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name and pass a `remove` prop to the `<Browser.Filter>` element:
 
-```tsx
+```tsx Code snippet
 <ContentEntryListConfig>
   <Browser.Filter name={"type"} remove />
 </ContentEntryListConfig>
@@ -190,7 +225,7 @@ Sometimes you might want to remove an existing filter. All you need to do is ref
 
 To replace an existing filter with a new filter element, you need to reference an existing filter by name and pass a new component via the `element` prop:
 
-```tsx
+```tsx Code snippet
 <ContentEntryListConfig>
   <Browser.Filter name={"type"} element={<span>A new filter!</span>} />
 </ContentEntryListConfig>
