refactor: add name prop

--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -71,7 +71,7 @@ The code examples below are based on a content model called `Property` with the 
 
 ## Add a Filter
 
-To add a new filter, you need a regular React element to pass to the `Browser.Filter` component through the `element` prop. Additionally, you must include the `name` prop, which is used as a reference.
+To add a new filter, you need a regular React element to pass to the `Browser.Filter` component through the `element` prop. You must also include the `name` prop, which serves as a unique identifier, enabling further interactions, such as positioning, removing, and replacing.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
