--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -46,18 +46,14 @@ export const App: React.FC = () => {
       <Admin>
         <Cognito />
 +       <ContentEntryListConfig>
-+         <Browser.Filter
-+           name={"demo-filter"}
-+           element={<span>{"Demo filter"}</span>}
-+           modelIds={["property"]}
-+         />
++          <Browser.Filter name={"demo-filter"} element={<span>Demo Filter</span>} />
 +       </ContentEntryListConfig>
       </Admin>
     );
 };
 ```
 
-In the admin app, Browser is the main area of a Content Model entry List, where users browse entries, apply filters, perform searching, organize entries into folders, create new entries, etc.
+In the admin app, Browser is the main area of a Content Model Entry List, where users browse entries, apply filters, perform searching, organize entries into folders, create new entries, etc.
 <Image src={hcmsFilters} title="Browser and the built-in filter by status" />
 
 <Alert type="info" title="Content entry setup">
@@ -102,7 +98,7 @@ export const App: React.FC = () => {
 };
 ```
 
-By declaring the `modelIds` prop, you can define in which Content Model entry list you want to show your custom filter. If you exclude this prop, the filter will be registered for all models in the system.
+By declaring the `modelIds` prop, you can define in which Content Model Entry List you want to show your custom filter. If you exclude this prop, the filter will be registered for all models in the system.
 
 In the example above, the next time you open your `property` content model browser and expand the filters bar, you'll see your new element there. This is the whole process of registering a new filter element. In the following sections, we'll focus on implementing actual filtering.
 
@@ -111,7 +107,7 @@ In the example above, the next time you open your `property` content model brows
 The following example shows how to implement a filter that shows "Deluxe properties only": we treat a property as "Deluxe" when its `price` is higher than 1 million. Note that we are only showing the actual filter implementation. To see the filter registration
 process, revisit the previous section.
 
-```tsx Code snippet
+```tsx
 import { useBind } from "@webiny/form";
 import { Switch } from "@webiny/ui/Switch";
 
@@ -146,7 +142,7 @@ Sometimes, you need to implement filtering logic that is more complex than just 
 
 To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, allowing you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API when the user interacts with the filters UI.
 
-```tsx Code snippet
+```tsx
 import { useBind } from "@webiny/form";
 import { Select } from "@webiny/ui/Select";
 
@@ -203,7 +199,7 @@ The easiest way to discover existing filters is to use your browser's React Dev 
 
 To position your custom filter before or after an existing filter, you can use the `before` and `after` props on the `<Browser.Filter>` element:
 
-```tsx Code snippet
+```tsx
 <ContentEntryListConfig>
   <Browser.Filter name={"price"} element={<FilterByPrice />} before={"type"} />
 </ContentEntryListConfig>
@@ -215,7 +211,7 @@ To position your custom filter before or after an existing filter, you can use t
 
 Sometimes you might want to remove an existing filter. All you need to do is reference the filter by name and pass a `remove` prop to the `<Browser.Filter>` element:
 
-```tsx Code snippet
+```tsx
 <ContentEntryListConfig>
   <Browser.Filter name={"type"} remove />
 </ContentEntryListConfig>
@@ -225,7 +221,7 @@ Sometimes you might want to remove an existing filter. All you need to do is ref
 
 To replace an existing filter with a new filter element, you need to reference an existing filter by name and pass a new component via the `element` prop:
 
-```tsx Code snippet
+```tsx
 <ContentEntryListConfig>
   <Browser.Filter name={"type"} element={<span>A new filter!</span>} />
 </ContentEntryListConfig>
