fix: add note about the `breakpoints` assignment

--- a/src/docs/5.34.x/page-builder/theming/theme-object.mdx
+++ b/src/docs/5.34.x/page-builder/theming/theme-object.mdx
@@ -369,7 +369,7 @@ export const typography = {
 
 In this example, we've defined responsive styles for the `heading1` typography variant. This means its styles will be different depending on the device's screen size. For `desktop`, the font size will be `48px`, for `tablet` it will be `36px`, for `mobile-landscape` it will be `24px`, and for `mobile-portrait` it will be `20px`.
 
-Note the use of breakpoint names (like `desktop`, `tablet`, etc.) instead of breakpoint values (like `@media (max-width: 4000px)`). This is because the theme object automatically converts breakpoint names to breakpoint values, based on the `breakpoints` constant defined at the top of the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L5) file (and assigned via the [`breakpoints`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L147) property in the  exported theme object).
+Note the use of breakpoint names (like `desktop`, `tablet`, etc.) instead of breakpoint values (like `@media (max-width: 4000px)`). This is because the theme object automatically converts breakpoint names to breakpoint values, based on the `breakpoints` constant defined at the top of the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L5) file (and [assigned](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L147) via the `breakpoints` property in the  exported theme object).
 
 ## FAQ
 
