--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -104,8 +104,7 @@ In the example above, the next time you open your `property` content model brows
 
 ### Simple Filter
 
-The following example shows how to implement a filter that shows "Deluxe properties only": we treat a property as "Deluxe" when its `price` is higher than 1 million. Note that we are only showing the actual filter implementation. To see the filter registration
-process, revisit the previous section.
+Here's an example of how to create a filter that displays only "Deluxe" properties. We consider a property to be "Deluxe" if its price is over 1 million. It's important to note that we're only providing the filter implementation and not the registration process, which can be found in the previous section.
 
 ```tsx
 import { useBind } from "@webiny/form";
