--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -10,6 +10,7 @@ import pageElementTab from "./assets/page-element-tab.png";
 import pageElementCarousel from "./assets/page-element-carousel.png";
 import aaclCustomPermissions from "./assets/aacl-custom-access.png";
 import aaclCustomAccess from "./assets/aacl-custom-access.png";
+import aaclCustomAccessUpgrade from "./assets/aacl-custom-access-upgrade.png";
 import aaclTeams from "./assets/aacl-teams.png";
 import aaclRolesRename from "./assets/aacl-roles-rename.png";
 import fbDateTimeField from "./assets/fb-date-time-field.png";
@@ -261,7 +262,7 @@ All Webiny project start with the **Open Source** tier. The tier is free to use,
 
 Trying to select **Custom Access** will result in an alert message being shown, informing the user that the feature is only available with the Advanced Access Control Layer (AACL), which is available on the **Business** and **Enterprise** tiers.
 
-<Image src={aaclCustomPermissions} title={"Selecting Custom Access on Open Source Tier"} />
+<Image src={aaclCustomAccessUpgrade} title={"Selecting Custom Access Level on Open Source Tier"} />
 
 To upgrade to **Business** tier, users [link their project](/docs/wcp/link-a-project) with [Webiny Control Panel (WCP)](/docs/wcp/overview), from where they can activate the Advanced Access Control Layer (AACL) for their project. By doing this, users will be able to define fine-grained permissions for individual Webiny apps.
 
@@ -270,7 +271,7 @@ To upgrade to **Business** tier, users [link their project](/docs/wcp/link-a-pro
   title={"Selecting Custom Access with Advanced Access Control Layer (AACL) Enabled"}
 />
 
-Finally, for the most advanced use cases, users can upgrade to the **Enterprise** tier. On top of the features available with the first two tiers, the **Enterprise tier** introduces the brand new **Teams** feature, enabling users to group users into teams and easily have them linked with one or more roles.
+Finally, for the most advanced use cases, users can upgrade to the **Enterprise** tier. On top of the features available with the first two tiers, the Enterprise tier introduces the brand new **Teams** feature, enabling users to group users into teams and easily have them linked with one or more roles.
 
 <Image src={aaclTeams} title={"The Brand New Teams Feature"} />
 
