--- a/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
+++ b/src/docs/5.37.x/headless-cms/extending/customize-entry-list-filters.mdx
@@ -104,31 +104,45 @@ In the example above, the next time you open your `property` content model brows
 
 ### Simple Filter
 
-Here's an example of how to create a filter that displays only "Deluxe" properties. We consider a property to be "Deluxe" if its price is over 1 million. It's important to note that we're only providing the filter implementation and not the registration process, which can be found in the previous section.
+Here's an example of how to create a filter that displays only "Deluxe" properties. We consider a property to be "Deluxe" if its price is over 1 million.
 
-```tsx
-import { useBind } from "@webiny/form";
-import { Switch } from "@webiny/ui/Switch";
+```diff-tsx apps/admin/src/App.tsx
+import React from "react";
+import { Admin } from "@webiny/app-serverless-cms";
+import { Cognito } from "@webiny/app-admin-users-cognito";
++ import { ContentEntryListConfig } from "@webiny/app-headless-cms";
++ import { useBind } from "@webiny/form";
++ import { Switch } from "@webiny/ui/Switch";
+import "./App.scss";
 
-const DemoFilter = () => {
-  const bind = useBind({
-    name: "price_gt"
-  });
++ const { Browser } = ContentEntryListConfig;
 
-  const toggleFilter = () => {
-    bind.onChange(bind.value ? undefined : 1000000);
-  };
++ const DeluxeFilter = () => {
++   const bind = useBind({
++     name: "price_gt"
++   });
++ 
++   const toggleFilter = () => {
++     bind.onChange(bind.value ? undefined : 1000000);
++   };
++ 
++   return <Switch {...bind} label={"Show deluxe properties only"} onChange={toggleFilter} />;
++ };
 
-  return <Switch {...bind} label={"Show deluxe properties only"} onChange={toggleFilter} />;
+export const App: React.FC = () => {
+    return (
+      <Admin>
+        <Cognito />
++       <ContentEntryListConfig>
++         <Browser.Filter
++           name={"deluxe"}
++           element={<DeluxeFilter />}
++           modelIds={["property"]}
++         />
++       </ContentEntryListConfig>
+      </Admin>
+    );
 };
-
-/* Register your custom filter. */
-<ContentEntryListConfig>
-  <Browser.Filter 
-    name={"demo-filter"} 
-    element={<DemoFilter />} 
-    modelIds={["property"]} />
-</ContentEntryListConfig>;
 ```
 
 Under the hood, filters are handled via a regular form component: this means we can hook into the form to set new filter values. We're using the `useBind` hook and give it a name. This `name` will become a key within the form data object, which will be passed to the GraphQL query. To unset a filter, we set `undefined`.
@@ -141,42 +155,60 @@ Sometimes, you need to implement filtering logic that is more complex than just 
 
 To correctly format our filters, we'll use the `Browser.FiltersToWhere` component to register our custom converter, allowing you to convert form data to a valid GraphQL query input. With this approach, you have full control over values that will be passed to the API when the user interacts with the filters UI.
 
-```tsx
-import { useBind } from "@webiny/form";
-import { Select } from "@webiny/ui/Select";
+```diff-tsx apps/admin/src/App.tsx
+import React from "react";
+import { Admin } from "@webiny/app-serverless-cms";
+import { Cognito } from "@webiny/app-admin-users-cognito";
++ import { ContentEntryListConfig } from "@webiny/app-headless-cms";
++ import { useBind } from "@webiny/form";
++ import { Select } from "@webiny/ui/Select";
+import "./App.scss";
 
-export const FilterByPrice = () => {
-  const bind = useBind({
-    name: "price",
-    defaultValue: "all",
-    beforeChange(value, cb) {
-      cb(value === "all" ? undefined : value);
-    }
-  });
++ export const FilterByPrice = () => {
++   const bind = useBind({
++     name: "price",
++     defaultValue: "all",
++     beforeChange(value, cb) {
++       cb(value === "all" ? undefined : value);
++     }
++   });
++ 
++   const options = [
++     { label: "All", value: "all" },
++     { label: "> 500k", value: "gt:500000" },
++     { label: "< 500k", value: "lt:500000" }
++   ];
++ 
++   return <Select {...bind} placeholder={"Filter by price"} options={options} size="medium" />;
++ };
 
-  const options = [
-    { label: "All", value: "all" },
-    { label: "> 500k", value: "gt:500000" },
-    { label: "< 500k", value: "lt:500000" }
-  ];
++ const convertFilters = ({ price, ...rest }: any) => {
++   if (!price) {
++     return rest;
++   }
++ 
++   const [operator, value] = price.split(":");
++   return { ...rest, [`price_${operator}`]: parseInt(value) };
++ };
 
-  return <Select {...bind} placeholder={"Filter by price"} options={options} size="medium" />;
+export const App: React.FC = () => {
+    return (
+      <Admin>
+        <Cognito />
++       <ContentEntryListConfig>
++        <Browser.Filter 
++          name={"price"} 
++          element={<FilterByPrice />} 
++          modelIds={["property"]} 
++        />
++        <Browser.FiltersToWhere 
++          converter={convertFilters} 
++          modelIds={["property"]} 
++        />
++      </ContentEntryListConfig>
+      </Admin>
+    );
 };
-
-const convertFilters = ({ price, ...rest }: any) => {
-  if (!price) {
-    return rest;
-  }
-
-  const [operator, value] = price.split(":");
-  return { ...rest, [`price_${operator}`]: parseInt(value) };
-};
-
-/* Register your custom filter, and the filters converter. */
-<ContentEntryListConfig>
-  <Browser.Filter name={"price"} element={<FilterByPrice />} />
-  <Browser.FiltersToWhere converter={convertFilters} />
-</ContentEntryListConfig>;
 ```
 
 <Image src={hcmsDropdownFilter} title="Dropdown Filter in Action" />
